# Apple-Eloquence-ELF

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  eci.ini
.github/workflows/: release.yml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  stage-libs.sh
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/eloquence/tts/: EloquenceNative.kt  EloquenceTtsService.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: tts_engine.xml
android/jni/: CMakeLists.txt  eloquence_jni.c
docs/: 01-extraction.md  02-conversion.md  03-integration.md  04-internals.md  05-troubleshooting.md
docs/cjk-investigation/: 2026-05-12-phase0-findings.md  2026-05-12-phase1-atexit-shim.md  2026-05-12-phase2-in-module-override.md  2026-05-13-phase3-api-divergence.md  eci-so-symbols.txt
docs/eci-2-api/: README.md  STATUS.md  eciDelete2.md  eciNewEx2.md
docs/macho2elf-audit/chs.dylib/: converter.txt  diff-converter.txt  diff-lief.txt  ground-truth.txt  summary.json
docs/macho2elf-audit/chsrom.dylib/: converter.txt  diff-converter.txt  diff-lief.txt  ground-truth.txt  lief.txt  summary.json
docs/macho2elf-audit/cht.dylib/: diff-lief.txt  ground-truth.txt  lief.txt
docs/macho2elf-audit/chtrom.dylib/: diff-lief.txt  ground-truth.txt  lief.txt
docs/macho2elf-audit/deu.dylib/: diff-lief.txt  ground-truth.txt  lief.txt  summary.json
docs/macho2elf-audit/eci.dylib/: converter.txt  diff-lief.txt  lief.txt  summary.json
docs/macho2elf-audit/eng.dylib/: converter.txt  diff-lief.txt  lief.txt  summary.json
docs/macho2elf-audit/enu.dylib/: converter.txt  diff-converter.txt  diff-lief.txt  ground-truth.txt  lief.txt  summary.json
docs/macho2elf-audit/esm.dylib/: diff-lief.txt  ground-truth.txt  lief.txt
docs/macho2elf-audit/esp.dylib/: converter.txt  diff-lief.txt  lief.txt  summary.json
docs/macho2elf-audit/fin.dylib/: diff-lief.txt  ground-truth.txt  lief.txt  summary.json
docs/macho2elf-audit/fra.dylib/: converter.txt  diff-lief.txt  lief.txt  summary.json
docs/macho2elf-audit/frc.dylib/: diff-lief.txt  ground-truth.txt  lief.txt  summary.json
docs/macho2elf-audit/ita.dylib/: diff-lief.txt  ground-truth.txt  lief.txt  summary.json
docs/macho2elf-audit/jpn.dylib/: converter.txt  diff-lief.txt  lief.txt  summary.json
docs/macho2elf-audit/jpnrom.dylib/: converter.txt  diff-lief.txt  lief.txt  summary.json
docs/macho2elf-audit/kor.dylib/: converter.txt  diff-lief.txt  lief.txt  summary.json
docs/macho2elf-audit/korrom.dylib/: diff-lief.txt  ground-truth.txt  lief.txt  summary.json
docs/macho2elf-audit/ptb.dylib/: diff-lief.txt  ground-truth.txt  lief.txt  summary.json
docs/superpowers/plans/: 2026-05-12-sd-eloquence-rewrite.md  2026-05-13-eci-2-api-switch.md  2026-05-13-macho2elf-relocation-audit.md
docs/superpowers/specs/: 2026-05-12-sd-eloquence-rewrite-design.md  2026-05-13-eci-2-api-switch-design.md  2026-05-13-eloquence-conf-knobs-design.md  2026-05-13-macho2elf-relocation-audit-design.md
examples/: Makefile  cjk_probe.c  eci.ini  mark_probe.c  speak.c  version.c
macho2elf/: macho2elf.py  requirements.txt
sd_eloquence/: .gitignore  CMakeLists.txt  LICENSE  README.md  eloquence.conf
sd_eloquence/src/: cjk_atexit_override.c  config.c  config.h  eci.h  eci_runtime.c  module.c  module_stub.c  sd_eloquence.c  spd_audio.h  spd_session.h  voice_presets.h
sd_eloquence/src/audio/: resampler.c  resampler.h  sink.c  sink.h
sd_eloquence/src/eci/: eci.h  engine.c  engine.h  languages.c  languages.h  runtime.c  runtime.h  voices.c  voices.h
sd_eloquence/src/filters/: README.GPL.md  filters.c  filters.h  lang_de.c  lang_en.c  lang_es.c  lang_fr.c  lang_global.c  lang_pt.c
sd_eloquence/src/old/: eci_runtime.c  sd_eloquence.c  spd_audio.h  voice_presets.h
sd_eloquence/src/ssml/: ssml.c  ssml.h
sd_eloquence/src/synth/: job.c  job.h  marks.c  marks.h  pause_mode.c  pause_mode.h  worker.c  worker.h
sd_eloquence/tests/: test_config.c  test_filters.c  test_languages.c  test_marks.c  test_pause_mode.c  test_ssml.c  test_voices.c
sd_eloquence/tools/: render_resampler_previews.c
tools/: audit_relocs.py  checksums.txt  cjk_atexit_shim.c  dump_chained_fixups.py  verify.sh
tools/tests/: test_chained_fixups.py
